<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Code Editor</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_settings">Settings</string>
    <string name="action_find">Find</string>
    <string name="action_find_replace">Find &amp; Replace</string>
    <string name="action_go_to_line">Go to Line</string>
    <string name="untitled">Untitled</string>
    <string name="file_saved">File saved successfully</string>
    <string name="file_opened">File opened successfully</string>
    <string name="error_saving">Error saving file</string>
    <string name="error_opening">Error opening file</string>
    <string name="unsaved_changes">You have unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_file">Select a file</string>
    <string name="enter_filename">Enter filename</string>
    <string name="line">Ln</string>
    <string name="column">Col</string>
    
    <string name="github_login_prompt">Sign in with GitHub to access your repositories</string>
    <string name="sign_in_github">Sign in with GitHub</string>
    <string name="github_oauth_title">Sign in with GitHub</string>
    <string name="github_oauth_desc">Sign in with your GitHub account to access and import your repositories</string>
    <string name="setup_github_oauth">Setup GitHub OAuth</string>
    <string name="setup_oauth_desc">To use GitHub login, you need to create a GitHub OAuth App and enter the Client ID</string>
    <string name="github_client_id">GitHub OAuth Client ID</string>
    <string name="github_client_secret">GitHub OAuth Client Secret</string>
    <string name="credentials_required">Client ID and Secret are required</string>
    <string name="oauth_setup_desc">Create a GitHub OAuth App at github.com/settings/developers</string>
    <string name="oauth_help_link">Create OAuth App at GitHub Settings</string>
    <string name="save_and_continue">Save &amp; Continue</string>
    <string name="client_id_required">Client ID is required</string>
    <string name="enter_code_prompt">Enter this code on GitHub:</string>
    <string name="open_github_to_login">Open GitHub to Sign In</string>
    <string name="waiting_for_auth">Waiting for authorization…</string>
    <string name="getting_code">Getting verification code…</string>
    <string name="search_repos">Search repositories…</string>
    <string name="extensions_coming_soon">Extensions support coming soon</string>
    <string name="commit_changes">Commit Changes</string>
    <string name="commit_message">Commit message</string>
    <string name="saving_to_github">Saving to GitHub…</string>
    <string name="saved_to_github">Changes saved to GitHub</string>
    <string name="error_github">GitHub error</string>
    <string name="loading">Loading…</string>
    <string name="no_repos">No repositories found</string>
    <string name="login_success">Successfully signed in!</string>
    <string name="redirecting_to_github">Redirecting to GitHub…</string>
    <string name="login_failed">Sign in failed</string>
    <string name="logout_confirm">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_file">Open File</string>
    <string name="save_to_github">Save to GitHub</string>
    <string name="welcome_message">Open a file or connect to GitHub to start editing code</string>
    <string name="welcome_title">Welcome to Code Editor</string>
    <string name="connect_github">Connect GitHub</string>
    <string name="tap_to_sign_in">Tap to sign in</string>
    <string name="files">Files</string>
    <string name="repos">Repos</string>
    <string name="signed_in_as">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="no_files_open">No files open</string>

    <string name="find_replace">Find &amp; Replace</string>
    <string name="find_hint">Find text…</string>
    <string name="replace_hint">Replace with…</string>
    <string name="case_sensitive">Aa</string>
    <string name="regex">.*</string>
    <string name="whole_word">Word</string>
    <string name="find_prev">Prev</string>
    <string name="find_next">Next</string>
    <string name="replace">Replace</string>
    <string name="replace_all">Replace All</string>
    <string name="matches_found">%d matches found</string>
    <string name="no_matches">No matches found</string>
    <string name="replaced_count">Replaced %d occurrences</string>

    <string name="go_to_line">Go to Line</string>
    <string name="line_range">Line 1 to %d</string>
    <string name="line_number_hint">Enter line number</string>
    <string name="go">Go</string>
    <string name="invalid_line">Invalid line number</string>

    <string name="new_file">New File</string>
    <string name="file_name_hint">Enter file name (e.g., main.py)</string>
    <string name="template">Template</string>
    <string name="empty">Empty</string>
    <string name="create">Create</string>
    <string name="file_created">File created</string>
    <string name="file_name_required">File name is required</string>

    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure you want to delete this file?</string>
    <string name="file_deleted">File deleted</string>
    <string name="file_renamed">File renamed</string>

    <string name="auto_saved">Auto-saved</string>
    <string name="auto_save_disabled">Auto-save disabled</string>

    <string name="pref_category_editor">Editor</string>
    <string name="pref_font_size">Font Size</string>
    <string name="pref_tab_size">Tab Size</string>
    <string name="pref_auto_indent">Auto Indent</string>
    <string name="pref_auto_indent_summary">Automatically indent new lines</string>
    <string name="pref_auto_bracket">Auto Bracket</string>
    <string name="pref_auto_bracket_summary">Automatically close brackets and quotes</string>
    <string name="pref_line_numbers">Line Numbers</string>
    <string name="pref_line_numbers_summary">Show line numbers</string>
    <string name="pref_word_wrap">Word Wrap</string>
    <string name="pref_word_wrap_summary">Wrap long lines</string>
    <string name="pref_highlight_line">Highlight Current Line</string>
    <string name="pref_highlight_line_summary">Highlight the current line</string>

    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_font_family">Font Family</string>

    <string name="pref_category_autosave">Auto Save</string>
    <string name="pref_auto_save">Enable Auto Save</string>
    <string name="pref_auto_save_summary">Automatically save changes</string>
    <string name="pref_auto_save_interval">Auto Save Interval</string>

    <string name="pref_category_keyboard">Keyboard</string>
    <string name="pref_keyboard_shortcuts">Keyboard Shortcuts</string>
    <string name="pref_keyboard_shortcuts_summary">Enable keyboard shortcuts for hardware keyboards</string>
    <string name="pref_vim_mode">Vim Mode</string>
    <string name="pref_vim_mode_summary">Enable Vim-style keybindings (experimental)</string>

    <string name="pref_category_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_github">Source Code</string>
    <string name="pref_github_summary">View on GitHub</string>

    <string name="keyboard_shortcuts">Keyboard Shortcuts</string>
    <string name="shortcut_save">Ctrl+S: Save</string>
    <string name="shortcut_find">Ctrl+F: Find</string>
    <string name="shortcut_replace">Ctrl+H: Replace</string>
    <string name="shortcut_go_to_line">Ctrl+G: Go to Line</string>
    <string name="shortcut_undo">Ctrl+Z: Undo</string>
    <string name="shortcut_redo">Ctrl+Y: Redo</string>
    <string name="shortcut_new">Ctrl+N: New File</string>
    <string name="shortcut_open">Ctrl+O: Open File</string>

    <string name="diff_view">Diff View</string>
    <string name="additions">+ %d additions</string>
    <string name="deletions">- %d deletions</string>
    <string name="no_changes">No changes</string>

    <string name="select_language">Select Language</string>
    <string name="encoding">Encoding: %s</string>
    <string name="file_size">Size: %s</string>

    <string name="recent_files">Recent Files</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="snippets">Snippets</string>
    <string name="insert_snippet">Insert Snippet</string>
    <string name="no_snippets">No snippets available</string>
    <string name="custom_snippet">Custom Snippet</string>
    <string name="add_snippet">Add Snippet</string>
    <string name="snippet_name">Snippet Name</string>
    <string name="snippet_trigger">Trigger (shortcut)</string>
    <string name="snippet_code">Code</string>
    <string name="snippet_saved">Snippet saved</string>
    <string name="snippet_deleted">Snippet deleted</string>
    
    <string name="quick_actions">Quick Actions</string>
    <string name="duplicate_line">Duplicate Line</string>
    <string name="toggle_comment">Toggle Comment</string>
    <string name="format_code">Format Code</string>
    <string name="select_all">Select All</string>
    
    <string name="autocomplete">Autocomplete</string>
    <string name="no_suggestions">No suggestions</string>
    
    <string name="pinch_zoom_hint">Pinch to zoom text</string>
    <string name="font_size_changed">Font size: %d</string>
    
    <string name="search_in_file">Search in file</string>
    <string name="search_in_project">Search in project</string>
    
    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_message">This app needs access to storage to open, edit, and save code files. Please grant storage permission to continue.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="exit_app">Exit</string>
    <string name="permission_granted">Storage permission granted</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_settings_message">Storage permission is required for this app to work. Please enable it in Settings.</string>
    <string name="open_settings">Open Settings</string>
</resources>
